--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,12 +29,13 @@
     <string name="register">Register</string>
     <string name="submit">Submit</string>
     <string name="enter_first_name">Please enter your first name</string>
+    <string name="please_enter_lastname">Please enter last name.</string>
     <string name="enter_phone_number">Please enter your phone number</string>
     <string name="valid_phone_number">Please enter valid phone number</string>
     <string name="enter_email_address">Please enter email address</string>
     <string name="enter_valid_email_address">Please enter valid email address</string>
-    <string name="enter_loyalty_point">Please enter loyalty point</string>
-
+    <string name="enter_loyalty_point">Please enter loyalty balance</string>
+    <string name="password_same">Old password and new password cannot be same.</string>
     <string name="empty_password">Enter password</string>
     <string name="short_password">Password must be 6 character long</string>
     <string name="invalid_password">Password must contain atleast one alphabet and numeric character</string>
@@ -45,14 +46,14 @@
     <string name="verify">Verify</string>
     <string name="resend">Resend</string>
     <string name="OTP">OTP</string>
-    <string name="otp_description">(Enter the OTP below in case we fail to detect the SMS automatically)</string>
+    <string name="otp_description">(Enter the OTP below to verify your Mobile number)</string>
 
     <string name="incomplete_otp">Please Enter OTP</string>
     <string name="resend_otp">Resend OTP</string>
     <string name="resend_in">Resend in</string>
     <string name="sec">Secs</string>
 
-    <string name="error_network_connection">Network connection problem</string>
+    <string name="error_network_connection">No internet connection.</string>
 
 
     <string name="add_button_name">Ad Button</string>
@@ -60,8 +61,8 @@
     <string name="all_products">All Product</string>
     <string name="home">Home</string>
     <string name="myorder">My Orders</string>
-    <string name="request">Request</string>
-    <string name="requests">Requests</string>
+    <string name="request">Add</string>
+    <string name="requests">Add</string>
     <string name="more">More</string>
     <string name="kraft_singles">Kraft Singles</string>
     <string name="discount_off">(40% off )</string>
@@ -132,7 +133,7 @@
     <string name="floor">Floor</string>
     <string name="street">Street</string>
     <string name="apartment_no">Apartment No</string>
-    <string name="additional_directions">Additional Directions</string>
+    <string name="additional_directions">Nearby Landmark</string>
     <string name="save">Save</string>
     <string name="set_delivery_address">Select Your Address</string>
     <string name="search_address">Search Address</string>
@@ -174,7 +175,7 @@
     <string name="add_detail">Add Details</string>
     <string name="choose_delivery_type">Choose Delivery Type</string>
     <string name="add_coupon">Coupon Code</string>
-    <string name="add_loyalty_point">Loyalty Points</string>
+    <string name="add_loyalty_point">Loyalty Balance</string>
     <string name="choose_payment_detail">Choose Payment Details</string>
     <string name="cash">Cash on delivery</string>
     <string name="cc">Credit Card</string>
@@ -212,8 +213,8 @@
     <string name="no_of_items_colon">No of items:</string>
     <string name="date_of_placing_order_colon">Date of placing order:</string>
     <string name="order_type">Order type:</string>
-    <string name="order_amount_colon">Order amount</string>
-    <string name="payment_method_colon">Payment method</string>
+    <string name="order_amount_colon">Order amount:</string>
+    <string name="payment_method_colon">Payment method:</string>
     <string name="order_status_colon">Order Status:</string>
     <string name="track_order">Track order</string>
     <string name="current_orders">Current Order</string>
@@ -249,14 +250,15 @@
     <string name="call">Call</string>
     <string name="reorder">Reorder</string>
     <string name="previous_order">Previous Order</string>
-    <string name="loyalty_point">Loyalty Points</string>
+    <string name="loyalty_point">Loyalty Balance</string>
+    <string name="delivered">Delivered</string>
     <string name="transactions">Transactions</string>
-    <string name="transfer_loyalty_point">Transfer loyalty point</string>
-    <string name="loyalty_point_earned">Loyalty point earned</string>
-    <string name="loyalty_point_redeem">Loyalty point redeem</string>
+    <string name="transfer_loyalty_point">Transfer loyalty balance</string>
+    <string name="loyalty_point_earned">Loyalty balance earned</string>
+    <string name="loyalty_point_redeem">Loyalty balance redeem</string>
     <string name="order">Order</string>
-    <string name="loyalty_point_more_then_zero">Loyalty point should be more then 0</string>
-    <string name="loyalty_point_transferred">Loyalty point transferred</string>
+    <string name="loyalty_point_more_then_zero">Loyalty balance should be more then 0</string>
+    <string name="loyalty_point_transferred">Loyalty balance transferred</string>
     <string name="rate_us">Rate Us</string>
     <string name="zero_omr">0 OMR</string>
     <string name="no_transaction">No Transaction</string>
@@ -266,7 +268,7 @@
     <string name="offer_expire_on">Offer expire on</string>
     <string name="apply_coupon">Apply Coupon</string>
     <string name="not_finding_your_favourite_products">Not Finding Your \n Favourite Products?</string>
-    <string name="type_in_each_product_you_need_and_we_ll_try_to_arrange_it_in_your_order">Type in each product you need and we\'ll try to arrange it in your order.</string>
+    <string name="type_in_each_product_you_need_and_we_ll_try_to_arrange_it_in_your_order">Type in each product not offered in our store and we will try to include it in the future.</string>
     <string name="product_name">Please enter product name.</string>
     <string name="write_your_review">Write/View Your Review</string>
     <string name="choose_time_slot">Book Time Slot</string>
@@ -293,23 +295,24 @@
     <string name="enter_way">Please enter way no.</string>
     <string name="choose_delivery_time_slot">Choose delivery time slot</string>
     <string name="call_us">Call Us</string>
-    <string name="chat_us">Chat Us</string>
+    <string name="chat_us">Chat</string>
     <string name="want_to_reorder">Are you sure you want to reorder this same order?</string>
     <string name="mail_us">Mail Us</string>
     <string name="verified">Verified</string>
     <string name="verify_otp">Please verify phone number.</string>
-    <string name="take_photo">Take Photo</string>
-    <string name="from_gallery">Choose from Gallery</string>
+    <string name="take_photo">Camera</string>
+    <string name="from_gallery">Photo Library</string>
     <string name="add_photo">Add Photo</string>
     <string name="want_to_edit">Are you sure you want to edit this order?</string>
-    <string name="last_paid">Already Paid</string>
-    <string name="amount_will_be_transfered">OMR will be transferred  to your  wallet.</string>
+    <string name="last_paid">Already Paid Amount</string>
+    <string name="amount_will_be_transfered">OMR will be added  to your  wallet.</string>
     <string name="cant_delete_default_address">Default address can\'t be deleted. Please select any other address as your default address to delete this address.</string>
     <string name="change">Change</string>
     <string name="delete">Delete</string>
     <string name="want_to_delete_product">Are you sure you want to delete this product request?</string>
     <string name="want_to_delete_address">Are you sure you want to delete this delivery address?</string>
     <string name="want_to_delete_order">Are you sure you want to delete this order?</string>
+    <string name="want_to_delete_allorder">Are you sure you want to delete all orders?</string>
     <string name="can_t_find_location">Can\'t find location?</string>
     <string name="switch_to_map_view">Switch to Map view</string>
     <string name="want_to_defaultaddress">Are you sure you want to add this place as your delivery address?</string>
@@ -325,4 +328,17 @@
         <item>+918</item>
 
     </string-array>
+
+    <string name="Kg">Kg</string>
+    <string name="Gm">Gm</string>
+    <string name="Lt">Lt</string>
+    <string name="Ml">Ml</string>
+    <string name="Cancelled">Cancelled</string>
+    <string name="NotCancelled">Not Cancelled</string>
+    <string name="Pending">Pending</string>
+    <string name="UnderPackaging">Under Packaging</string>
+    <string name="ReadyToDeliver">Ready To Deliver</string>
+    <string name="COD">Cash On Delivery</string>
+    <string name="choose_delivery_time_slot_validation">Please choose delivery time slot.</string>
+    <string name="from_order">From Order:</string>
 </resources>
