--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,7 +133,7 @@
     <string name="floor">Floor</string>
     <string name="street">Street</string>
     <string name="apartment_no">Apartment No</string>
-    <string name="additional_directions">Nearby Landmark</string>
+    <string name="additional_directions">Additional Information</string>
     <string name="save">Save</string>
     <string name="set_delivery_address">Select Your Address</string>
     <string name="search_address">Search Address</string>
@@ -203,7 +203,7 @@
     <string name="privacy_policy">Privacy Policy</string>
     <string name="filter">Filter</string>
     <string name="offers">Offers</string>
-    <string name="expires">Expires</string>
+    <string name="expires">Expires on#</string>
     <string name="cart_is_empty">Cart is empty</string>
     <string name="select_delivery_type">Please select your delivery type</string>
     <string name="select_delivery_time_slot">Please select your delivery time slot.</string>
@@ -267,11 +267,11 @@
     <string name="redeemed">Redeemed</string>
     <string name="offer_expire_on">Offer expire on</string>
     <string name="apply_coupon">Apply Coupon</string>
-    <string name="not_finding_your_favourite_products">Not Finding Your \n Favourite Products?</string>
+    <string name="not_finding_your_favourite_products">Not Finding Your Favourite Products?</string>
     <string name="type_in_each_product_you_need_and_we_ll_try_to_arrange_it_in_your_order">Type in each product not offered in our store and we will try to include it in the future.</string>
     <string name="product_name">Please enter product name.</string>
     <string name="write_your_review">Write/View Your Review</string>
-    <string name="choose_time_slot">Book Time Slot</string>
+    <string name="choose_time_slot">Book Delivery Time Slot</string>
     <string name="submit_review">Submit Review</string>
     <string name="rate_product_validation">Please rate the product.</string>
     <string name="review_product_validation">Please review the product.</string>
@@ -286,18 +286,18 @@
     <string name="office_no">Office No.</string>
     <string name="enter_house_number">Please enter your house number.</string>
     <string name="enter_office_number">Please enter your office number.</string>
-    <string name="choose_a_slot">Choose a slot</string>
+    <string name="choose_a_slot">Select a slot</string>
     <string name="add_money">Add Money</string>
     <string name="balance">Balance</string>
     <string name="have_a_promocode">Have a promocode?</string>
     <string name="amount_dollar">Amount(OMR)</string>
     <string name="way_no">Way No.</string>
     <string name="enter_way">Please enter way no.</string>
-    <string name="choose_delivery_time_slot">Choose delivery time slot</string>
-    <string name="call_us">Call Us</string>
-    <string name="chat_us">Chat</string>
+    <string name="choose_delivery_time_slot">Select Delivery Time Slot</string>
+    <string name="call_us">Call </string>
+    <string name="chat_us">Live Chat</string>
     <string name="want_to_reorder">Are you sure you want to reorder this same order?</string>
-    <string name="mail_us">Mail Us</string>
+    <string name="mail_us">Send an email </string>
     <string name="verified">Verified</string>
     <string name="verify_otp">Please verify phone number.</string>
     <string name="take_photo">Camera</string>
@@ -320,6 +320,8 @@
     <string name="clearall">Clear All</string>
     <string name="delete_all_notifications">Are you sure you want to delete all notifications?</string>
     <string name="delete_notificaions">Are you sure you want to delete this notification?</string>
+    <string name="delete_loyaltypoint">Are you sure you want to delete Loyalty balance history?</string>
+    <string name="delet_transaction">Are you sure you want to delete this Wallet transaction history?</string>
     <string name="reply">Reply:</string>
     <string name="enter_the_product_name">Enter the product name</string>
 
@@ -339,6 +341,14 @@
     <string name="UnderPackaging">Under Packaging</string>
     <string name="ReadyToDeliver">Ready To Deliver</string>
     <string name="COD">Cash On Delivery</string>
-    <string name="choose_delivery_time_slot_validation">Please choose delivery time slot.</string>
+    <string name="choose_delivery_time_slot_validation">Please, select delivery time slot.</string>
     <string name="from_order">From Order:</string>
+    <string name="redeem">Redeem</string>
+    <string name="add_new_address">Add  Address</string>
+    <string name="add_another_address">Add Another Address</string>
+    <string name="minimum_order_validation">Minimum order value must be 5.000 OMR.</string>
+    <string name="ok">OK</string>
+    <string name="not_applicable">N/A</string>
+    <string name="add_delivery_address">Please select your delivery address to continue.</string>
+
 </resources>
